# midi2osc-ardour

./: CMakeLists.txt  README.md
src/: main.cpp  mididev.cpp  mididev.hpp  parser.y
